CR-2002-08-02-0: Testsuite: delete_job: when wait_for_end is specified, delete
                            job a second time

CR-2002-08-01-0: Testsuite: - Several changes for maintrunc compatibility
                            - better setup error behaviour
                 Bugfix:    ckpt_migration_test fails due to reference checks
                 Issue:     #340

JG-2002-08-01-0: Bugfix:    Systems with security framework enabled did not 
                            work with cull version checking (JG-2002-07-17-0).

CR-2002-07-31-1: Bugfix:    English messages show up when running install 
                            in localized environment (fix for "fr" Solaris 8
                            and 9)   
                 Bugtraq:   #4719203
                 Changed:   all binaries


JG-2002-07-29-0: Enhancem.  Complete implementation and use of boolean and 
                            object CULL data types.
                            Added module tests for CULL list functionality
                            and CULL packing.
                 Issue:     #324
                 Cleanup:   Removed unused function lSortLlist2.
                 Bugfix:    Fixed Bug in lDumpElem.
                            Fixed memory access bug.

CR-2002-07-31-0  Bugfix:    addend missing #ifdef __SGE_NO_USERMAPPING__ 
                            lines to preserve sge_options[] array

AH-2002-07-29-2  Doc:       Describe the 'all' keyword for queue_list in
                            sge_pe(5) and checkpoint(5).
                 Issue:     #319
                 Doc:       Describe qconf -mqattr switch as the deprecated
                            form of the -rattr and not of the -mattr switch.
                            Mention that ?attr switch familiy operates also
                            on PE and ckpt objects.
                 Issue:     #321

CR-2002-07-29-3: Bugfix:    CLI: invalid option "-jid jid" for qconf in 
                            qconf -help