@@ -456,6 +456,7 @@ static int dispatch_jobs(sge_Sdescr_t *lists, lList **orderlist,
       return 0;
    }
 
+   user_list_init_jc(&user_list, *(splitted_job_lists[SPLIT_RUNNING]));
    job_lists_split_with_reference_to_max_running(splitted_job_lists,
                                                  &user_list,
                                                  scheddconf.maxujobs);
@@ -780,6 +781,14 @@ SKIP_THIS_JOB:
          /* notify access tree */
          if (!sgeee_mode) 
             at_dispatched_a_task(job, 1);
+      
+         /* 
+          * drop idle jobs that exceed maxujobs limit 
+          * should be done after resort_job() 'cause job is referenced 
+          */
+         job_lists_split_with_reference_to_max_running(splitted_job_lists,
+                                          &user_list, scheddconf.maxujobs);
+         trash_splitted_jobs(splitted_job_lists);
       } else {
          /* before deleting the element mark the category as rejected */
          cat = lGetRef(job, JB_category);
@@ -788,17 +797,11 @@ SKIP_THIS_JOB:
                         lGetString(cat, CT_str), lGetUlong(cat, CT_refcount))); 
             sge_reject_category(cat);
          }
-      }
 
-      /* prevent that we get the same job next time again */
-      if (!dispatched_a_job) {
+         /* prevent that we get the same job next time again */
          lDelElemUlong(splitted_job_lists[SPLIT_PENDING], JB_job_number, job_id); 
       }
 
-      /* drop idle jobs that exceed maxujobs limit */
-      /* should be done after resort_job() 'cause job is referenced */
-      job_lists_split_with_reference_to_max_running(splitted_job_lists,
-                                     &user_list, scheddconf.maxujobs);
       lFreeElem(job);
 
       /*------------------------------------------------------------------ 
