@@ -1,3 +1,9 @@
+EB-2002-08-07-0  Bugfix:    maxujobs prevents dispatching even if job limit is
+                            not reached
+                 Issue:     #345
+                 Bugtraq:   #4727515
+                 Changed:   sge_schedd
+
 CR-2002-08-02-0: Testsuite: delete_job: when wait_for_end is specified, delete
                             job a second time
 
